@@ -1,3 +1,9 @@
+2005-03-10  Alexander Gottwald  <ago at freedesktop dot org>
+
+	* winmultiwindowwndproc.c:
+	Force rebuilding of window stack if a window changes it's state from 
+	minimized.
+
 2005-03-07  Alexander Gottwald  <ago at freedesktop dot org>
 
 	* winmultiwindowwndproc.c:
